prusti-tests/tests/verify/fail/simple-specs/wrong-method.rs
use prusti_contracts::*;

struct S {
    f: i32
}

impl S {
    #[requires(true)]
    #[ensures(false)] //~ ERROR postcondition
    pub fn test(self) {}
}

fn main() {}
